# KyraGameEngine

./: CMakeLists.txt  KyraGameEngine.cmake.in  KyraGameEngine.config  README.md
Examples/01_TriangleExample/: 01_TriangleExample.cpp  CMakeLists.txt
Examples/Pong/Engine/: CMakeLists.txt  PlayerPadActor.hpp  PongModule.cpp  SimpleRenderPassProcessor.hpp
Source/Framework/: Application.cpp  CMakeLists.txt
Source/KyraGameEngine/: CMakeLists.txt  Platform.hpp  RHI.hpp  Window.hpp
Source/KyraGameEngine/AI/: CMakeLists.txt
Source/KyraGameEngine/Animation/: CMakeLists.txt
Source/KyraGameEngine/Application/: Application.cpp  Application.hpp  CMakeLists.txt  Game2D.hpp
Source/KyraGameEngine/Asset/: Asset.hpp  AssetManager.cpp  AssetManager.hpp  CMakeLists.txt
Source/KyraGameEngine/Audio/: AudioBuffer.hpp  AudioComponent.cpp  AudioComponent.hpp  AudioController.hpp  AudioDeviceImplementation.hpp  CMakeLists.txt
Source/KyraGameEngine/Audio/XAudio2/: AudioBufferXAudio2.hpp  AudioDeviceImplementationXAudio2.cpp  AudioDeviceImplementationXAudio2.hpp
Source/KyraGameEngine/Container/: RingBufferMPSC.hpp  RingBufferSPSC.hpp
Source/KyraGameEngine/Core/: AbstractSystem.hpp  Application.hpp  Registry.hpp  System.hpp  SystemManager.hpp
Source/KyraGameEngine/Core/Callback/: Callback.hpp  CallbackInstance.hpp  CallbackInstanceOwner.hpp
Source/KyraGameEngine/Debug/: CMakeLists.txt  Profiling.cpp  Profiling.hpp
Source/KyraGameEngine/GameModule/: CMakeLists.txt  GameModule.hpp
Source/KyraGameEngine/Graphics/: RenderCommand2D.hpp  Renderable2D.hpp  Sprite.hpp  Vertex2D.hpp
Source/KyraGameEngine/IO/: TextFile.hpp
Source/KyraGameEngine/Image/: CMakeLists.txt  Color.hpp  Image.cpp  Image.hpp  ImageManager.hpp
Source/KyraGameEngine/Input/: CMakeLists.txt  InputManager.hpp  Keyboard.cpp  Keyboard.hpp
Source/KyraGameEngine/Log/: AbstractLogStream.hpp  CMakeLists.txt  Log.hpp  LogMessage.hpp  LogStreamConsole.hpp  Logger.cpp  Logger.hpp
Source/KyraGameEngine/Math/: Matrix4.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
Source/KyraGameEngine/Messaging/: EventBus.hpp  EventHandler.hpp  Signal.hpp
Source/KyraGameEngine/Platform/: AbstractOpenGLContext.hpp  AbstractWindow.cpp  AbstractWindow.hpp  Keyboard.hpp  MessageBox.hpp  Mouse.hpp
Source/KyraGameEngine/Platform/OpenGL/: GLEX.cpp  GLEX.hpp
Source/KyraGameEngine/Platform/Windows/: MessageBox.cpp  OpenGLContextWGL.cpp  OpenGLContextWGL.hpp  WindowWinAPI.cpp  WindowWinAPI.hpp
Source/KyraGameEngine/RHI/: AbstractCommandBuffer.hpp  AbstractCopyPass.hpp  AbstractDescriptorSet.hpp  AbstractFramebuffer.hpp  AbstractGraphicsContext.hpp  AbstractPipeline.hpp  AbstractRenderDevice.hpp  AbstractRenderPass.hpp  AbstractRenderPipeline.hpp  AbstractRenderTarget.hpp  AbstractShader.hpp  AbstractShaderProgram.hpp  AbstractSwapChain.hpp  AbstractTexture.hpp  AbstractTransferBuffer.hpp  AbstractVertexBuffer.hpp  BufferLayout.cpp  BufferLayout.hpp  DescriptorSet.hpp
Source/KyraGameEngine/RHI/OpenGL/: CommandBufferOpenGL.cpp  CommandBufferOpenGL.hpp  DescriptorSetOpenGL.hpp  GLEX.cpp  GLEX.hpp  GraphicsContextOpenGL.cpp  GraphicsContextOpenGL.hpp  OpenGLContextWGL.cpp  OpenGLContextWGL.hpp  PipelineOpenGL.cpp  PipelineOpenGL.hpp  RenderPassOpenGL.hpp  ShaderOpenGL.cpp  ShaderOpenGL.hpp  ShaderProgramOpenGL.cpp  ShaderProgramOpenGL.hpp  SwapChainOpenGL.cpp  SwapChainOpenGL.hpp  VertexBufferOpenGL.cpp  VertexBufferOpenGL.hpp
Source/KyraGameEngine/RHI/Vulkan/: GraphicsContextVulkan.hpp
Source/KyraGameEngine/Renderer/: CMakeLists.txt  CommandBuffer.hpp  CommandBufferOpenGL.cpp  CommandBufferOpenGL.hpp  RenderDeviceImplementation.hpp  RenderDeviceImplementationOpenGL.cpp  RenderDeviceImplementationOpenGL.hpp  RenderPass.cpp  RenderPass.hpp  RenderPassPresent.cpp  RenderPassPresent.hpp  RenderPassProcessor.hpp  RenderPipeline.cpp  RenderPipeline.hpp  RenderPipelineState.hpp  Renderer.cpp  Renderer.hpp  Swapchain.hpp  SwapchainOpenGL.cpp  SwapchainOpenGL.hpp  Texture.hpp  VertexBuffer.hpp
Source/KyraGameEngine/Renderer/OpenGL/: CommandBufferOpenGL.cpp  CommandBufferOpenGL.hpp  RenderDeviceImplementationOpenGL.cpp  RenderDeviceImplementationOpenGL.hpp  RenderPipelineStateOpenGL.cpp  RenderPipelineStateOpenGL.hpp  SwapchainOpenGL.cpp  SwapchainOpenGL.hpp  TextureOpenGL.cpp  TextureOpenGL.hpp  VertexBufferOpenGL.cpp  VertexBufferOpenGL.hpp
Source/KyraGameEngine/Renderer/RHI/: RHIBuffer.hpp  RHICommandBuffer.hpp  RHICommandQueue.hpp  RHIDevice.hpp  RHIFrameBuffer.hpp  RHIPipelineLayout.hpp  RHIPipelineState.hpp  RHIRenderPass.hpp  RHIShader.hpp  RHISwapChain.hpp
Source/KyraGameEngine/Renderer/Vulkan/: CommandBufferVulkan.cpp  CommandBufferVulkan.hpp  RenderDeviceImplementationVulkan.cpp  RenderDeviceImplementationVulkan.hpp  RenderPipelineStateVulkan.cpp  RenderPipelineStateVulkan.hpp  SwapchainVulkan.cpp  SwapchainVulkan.hpp
Source/KyraGameEngine/Scene/: CMakeLists.txt  Component.hpp  Node.hpp  Scene.hpp  SceneRenderer.hpp  TransformComponent.hpp
Source/KyraGameEngine/Scene/2D/: SceneRenderProcessor2D.hpp  SceneSystem2D.hpp  SpriteComponent.hpp  TransformComponent2D.hpp
Source/KyraGameEngine/Scripting/: Actor.hpp  CMakeLists.txt  ScriptComponent.hpp  ScriptComponentFactory.hpp  ScriptComponentFactoryInterface.hpp  ScriptComponentInterface.hpp  ScriptSystem.hpp
Source/KyraGameEngine/Serializing/: BinaryReader.cpp  BinaryReader.hpp  BinaryWriter.cpp  BinaryWriter.hpp  CMakeLists.txt  Serializable.hpp
Source/KyraGameEngine/Window/: AbstractWindow.hpp  CMakeLists.txt  Window.cpp  Window.hpp  WindowEvent.hpp  WindowImplementation.cpp  WindowImplementation.hpp  WindowImplementationWinAPI.cpp  WindowImplementationWinAPI.hpp
Source/KyraGameEngine/Window/WinAPI/: WindowWinAPI.cpp  WindowWinAPI.hpp
Source/KyraGameEngine/Window/Windows/: WindowWindows.hpp
Source/Log/: CMakeLists.txt  LogStreamConsole.cpp  LogStreamFile.cpp  Logger.cpp
Source/Platform/: CMakeLists.txt
Source/Platform/WinAPI/: WindowWinAPI.cpp
Tests/: CMakeLists.txt  RPIRenderGraphTest.cpp  RendererRHITest.cpp  RendererRPITest.cpp  WindowTest.cpp
(+68 files in other folders)
