add_subdirectory(Log)
add_subdirectory(Window)
add_subdirectory(Input)
add_subdirectory(Renderer)
add_subdirectory(Scripting)
add_subdirectory(Scene)
add_subdirectory(GameModule)
add_subdirectory(Application)
add_library(KyraGameEngine INTERFACE)
target_link_libraries(KyraGameEngine INTERFACE KyraLog KyraApplication KyraRenderer KyraScripting KyraInput)
target_include_directories(KyraGameEngine INTERFACE ${KYRA_SOURCE_DIRECTORY})