add_subdirectory(Debug)
add_subdirectory(Log)
add_subdirectory(Window)
add_subdirectory(Input)
add_subdirectory(Asset)
add_subdirectory(Renderer)
add_subdirectory(Image)
add_subdirectory(Scripting)
add_subdirectory(Scene)
add_subdirectory(Application)
add_subdirectory(Serializing)
add_subdirectory(AI)
add_subdirectory(Audio)
add_subdirectory(Animation)
add_library(KyraGameEngine INTERFACE)
target_link_libraries(KyraGameEngine INTERFACE KyraLog KyraApplication KyraAsset KyraRenderer KyraScripting KyraInput KyraSerialization KyraDebug KyraImage KyraAudio KyraAI KyraAnimation)
target_include_directories(KyraGameEngine INTERFACE ${KYRA_SOURCE_DIRECTORY})